Add image proxy to bypass Spoonacular API CORS setting
